# flat-magic-v2

./: .gitignore  AI_MAPPING_FIXES_SUMMARY.md  AI_MAPPING_PROMPT_PARENT_41282.md  AI_MAPPING_PROMPT_SOURCE_MAP_PARENT_41282.md  AI_TEMPLATE_GENERATION.md  CLAUDE.md  DATA_STRUCTURE_FIXES_SUMMARY.md  FORMAT_ENFORCEMENT_SUMMARY.md  GEMINI_API_OPTIMIZATION_SUMMARY.md  GEMINI_SAFETY_FILTER_ANALYSIS.md  MODULAR_REFACTORING_SUMMARY.md  OPTIMAL_AI_MAPPING_PROMPT_FOR_GEMINI_TESTING.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PRODUCTION_TEST_GUIDE.md  PROMPT_ENGINEERING_CORRECTION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  ROOT_CAUSE_ANALYSIS_STEP5_MAPPING.md  SAFETY_FILTER_IMPLEMENTATION_SUMMARY.md  STRUCTURED_OUTPUT_IMPLEMENTATION.md  STRUCTURED_OUTPUT_TEST_SUMMARY.md  TEMPLATE_WORKFLOW.md  USAGE_EXAMPLE.md  WORKFLOW_GUIDE.md  ai_studio_code.py  datendefinitionen_analysis.json  debug_safety_filter.py  demo_ai_workflow.py  demo_complete_workflow.py  demo_data_structure_robustness.py  demo_structured_output_results.py  example_output_ai.json  gemini_prompt.txt  gemini_request.json  generate_real_step5_mapping.py  main.py  pants_analysis.json  production_workflow_test.py  pyproject.toml  requirements.txt  (+37 more)
.bmad-core/: install-manifest.yaml
claudedocs/: step2_implementation_report.md  step2_optimization_summary.md
context/: current-state.md  current-state.md.bak
requirements/: compression_algorithm_specification.md  csv_json_compression_requirements.md
sku_analyzer/: __init__.py  cli.py  integration_example.py  workflow_integration.py
test-files-v2/: SEASONING.xlsm  (+1 more)
(+82 files in other folders)
